--- a/Page/scss/_font.scss
+++ b/Page/scss/_font.scss
@@ -1,9 +1,8 @@
 @font-face {
     font-family: 'Fjalla One';
+    src:url(../../public/selffont/SHXJdWnWW6HDq-6DpcG8PwsYbbCjybiHxArTLjt7FRU.ttf) format('truetype');
     font-style: normal;
     font-weight: normal;
-    src:url(../../public/selffont/shxjdwnww6hdq-6dpcg8pwsybbcjybihxartljt7fru-webfont.woff2) format('woff2'),
-         url(../../public/selffont/shxjdwnww6hdq-6dpcg8pwsybbcjybihxartljt7fru-webfont.woff) format('woff');
   }
 
 
