--- a/Page/scss/pages/_urgentReport.scss
+++ b/Page/scss/pages/_urgentReport.scss
@@ -19,6 +19,7 @@
 			color:#409EFF;
 			transform:rotateZ(-90deg);
 			font-size:14px;
+			// font-family: 
 		}
 		.No{
 			padding-left:5px;
@@ -112,6 +113,7 @@
 		.Nophoto{
 			color:#999999;
 			font-family:Microsoft YaHei;
+			// font-family: $font-family-Yahei;
 		}
 	}
 
