--- a/Page/scss/pages/_home.scss
+++ b/Page/scss/pages/_home.scss
@@ -632,12 +632,21 @@
 											display:flex;
 											justify-content:space-around;
 											&>div{
+												position:relative;
+												width:100%;
 												display:inline-block;
 												height:64px;
 												vertical-align:middle;
 												line-height:64px;
 												p{
 													line-height:32px;
+													text-overflow: ellipsis;
+													width: 100%;
+													overflow: hidden;
+													white-space: nowrap;
+													position: absolute;
+													left: 0;
+													text-align: center;
 													&:first-child{
 														font-size:16px;
 														font-weight:bold;
@@ -646,6 +655,7 @@
 													&:last-child{
 														font-size:12px;
 														color:#666C72;
+														top:32px;
 													}
 												}
 												i{
