添加临时任务中每页样式选择的下拉框隐藏

--- a/Page/scss/pages/_home.scss
+++ b/Page/scss/pages/_home.scss
@@ -777,6 +777,12 @@
 				text-align: center;
 			}
 		}
+		.el-pagination__sizes {
+			display: none;
+		}
+		.demonstration {
+			display: none;
+		}
 	}
 }
 
