--- a/Page/scss/components/_pageNation.scss
+++ b/Page/scss/components/_pageNation.scss
@@ -8,6 +8,12 @@
     padding: 10px 0;
     bottom: 10px;
     left: 320px;
+    .demonstration {
+        font-size: 14px;
+        height: 30px;
+        color: #333;
+        line-height: 28px;
+    }
     .el-pagination {
         width: 100%;
         display: inline !important;
