--- a/Page/scss/pages/_home.scss
+++ b/Page/scss/pages/_home.scss
@@ -50,6 +50,14 @@
 		border-top-right-radius:4px;
 	}
 }
+.home-message{
+	.el-row{
+		cursor:pointer;
+	}
+}
+
+
+
 .home {
 	clear:both;
 	position:relative;
