--- a/Page/scss/pages/_home.scss
+++ b/Page/scss/pages/_home.scss
@@ -432,6 +432,40 @@
 					white-space: nowrap;
 					text-overflow: ellipsis;
 				}
+				.dialogTaskDetail{
+					.taskInfo{
+						margin-bottom:20px;
+					}
+					.taskPersonList{
+						.taskDetailList{
+							text-align:left;
+							span{
+								font-weight:bold;
+							}
+						}
+						.el-col{
+							text-align:left;
+							.taskPersonBtn{
+								font-size:12px;
+								margin-left:10px;
+								margin-right:0;
+								margin-bottom:10px;
+								background: #DBE9FE;
+								border: 1px solid #7FB1FF;
+								border-radius: 3px;
+								padding:6px 12px;
+								color:#1F407B;
+								i{
+									color:#009eff;
+								}
+								&.active,&:hover{
+									background-color:#0064FF;
+									color:#fff;
+								}
+							}
+						}
+					}
+				}
 			}
 			.mainList{
 				flex:1;
