报表页面表格宽度设置为100%

--- a/Page/scss/pages/_sheet.scss
+++ b/Page/scss/pages/_sheet.scss
@@ -54,6 +54,10 @@
     .sheet-table {
         margin: 3px;
         margin-top: 10px;
+        width: 100%;
+        table {
+            width: 100% !important;
+        }
         thead>.cell {
             background-color: #666;
             height: 30px;
