样式调整未完

--- a/Page/scss/pages/_home.scss
+++ b/Page/scss/pages/_home.scss
@@ -429,36 +429,76 @@
 							left:-5px;
 						}
 						.icon-hangxian:before{
+							font-size:30px;
 							position:absolute;
-							top:11px;
 						}
 					}
 					.taskInfo{
 						margin-bottom:20px;
 					}
 					.taskPersonList{
-					   // .taskBtn1{
-							//height:30px;
-							
-						//}
+						.el-tabs__item{
+							width:80px;
+							height:30px;
+							line-height:30px;
+							font-size:14px;
+							background-color:#E6E6E6;
+							color:#333333;
+							border-radius:4px 4px 0 0;
+						}
+						.is-active{
+							color:#FFFFFF;
+							background-color:#289DFF;
+						}
+						.icon-fenpei{
+							font-size:40px;
+							position:relative;
+							top:30px;
+							left:15px;
+							color:#2C569E;
+						}
+						.el-tabs__nav-scroll{
+							border-bottom:1px dashed #289DFF;
+							}
 						.is-top{
 							padding:0;
-							height:30px;
+						}
+						.is-top:after{
+							display:none;
 						}
 						.currentRegion{
+							padding:10px 14px;
 							border:1px solid #CBDDED;
 							background-color:#F8FCFF;
 							height:140px;
+							.icon-feiji{
+							}
 						}
 						.selectedStaff{
 							border:1px solid #CBDDED;
 							background-color:#F8FCFF;
 							height:140px;
+							div{
+								margin:0 0 10px 10px;
+							}
 						}
 						.taskDetailList{
 							text-align:left;
-							span{
+							font-family:Microsoft YaHei;
+							color:#333333;
+							.span1{
+								min-width:110px;
+								display:inline-block;
+							}
+							.span2{
+								display:inline-block;
+								min-width:30px;
 								font-weight:bold;
+								margin-right:10px;
+							}
+							.span3{
+								display:inline-block;
+								min-width:50px;
 							}
 						}
 						.el-col{
