--- a/Page/scss/pages/_home.scss
+++ b/Page/scss/pages/_home.scss
@@ -367,6 +367,7 @@
 			display: flex;
 			flex-direction:column;
 			padding-top:0;
+			height: 100vh;
 			.flight-table {
 				thead>.cell {
 					background-color: #666;
