区域内容间距调整

--- a/Page/scss/pages/_home.scss
+++ b/Page/scss/pages/_home.scss
@@ -481,6 +481,10 @@
 						padding-bottom:30px;
 						display:flex;
 						justify-content:space-around;
+						.el-col{
+							height:45px;
+							overflow:hidden;
+						}
 						.column4 div,.column5 div{
 							text-align:left;
 						}
@@ -494,14 +498,14 @@
 							font-size:10px;
 							font-family:Microsoft YaHei;
 							color:#666C72;
+							text-overflow:ellipsis;
+							overflow:hidden;
+							white-space:nowrap;
 						}
 						.icon-hangxian{
 							position:relative;
-							left:-5px;
-						}
-						.icon-hangxian:before{
 							font-size:30px;
-							position:absolute;
+							color:#0185DE;
 						}
 					}
 					.taskInfo{
@@ -542,6 +546,10 @@
 							border:1px solid #CBDDED;
 							background-color:#F8FCFF;
 							height:140px;
+							overflow-y:auto;
+							div{
+								margin-bottom:10px;
+							}
 							.icon-feiji{
 							}
 						}
@@ -549,6 +557,7 @@
 							border:1px solid #CBDDED;
 							background-color:#F8FCFF;
 							height:140px;
+							overflow-y:auto;
 							div{
 								margin:0 0 10px 10px;
 							}
