当前部门增加分页

--- a/Page/scss/pages/_urgentReport.scss
+++ b/Page/scss/pages/_urgentReport.scss
@@ -16,6 +16,10 @@
 		display:inline-block;
 		width:100%;
 		text-align:center;
+		span{
+			color:#666666;
+			font-weight:400;
+		}
 	}
 	.urgentReport{
 		flex:1;
