排班飞机尾号过长时显示调整为...

--- a/Page/scss/pages/_home.scss
+++ b/Page/scss/pages/_home.scss
@@ -761,6 +761,11 @@
 										height:64px;
 										margin-top:10px;
 										overflow:hidden;
+										.airNo{
+											overflow:hidden;
+											text-overflow:ellipsis;
+											white-space:nowrap;
+										}
 										.el-col{
 											margin-top:0;
 										}
