违规记录待审核页面的分页和查询完成

--- a/Page/scss/pages/_violation.scss
+++ b/Page/scss/pages/_violation.scss
@@ -6,6 +6,7 @@
     font-size:14px;
     height: 100vh;
     background: #E4E7EC;
+    overflow: scroll;
     .violation-topbar {
         // background-color: #fff;
     }
