--- a/Page/scss/pages/_statistics.scss
+++ b/Page/scss/pages/_statistics.scss
@@ -1,5 +1,7 @@
 .statistics {
     width: 100%;
+    height: auto;
+    overflow: scroll;
     .el-row{
         width: 100%;
         .el-date-editor {
