--- a/Page/scss/pages/_nav.scss
+++ b/Page/scss/pages/_nav.scss
@@ -8,10 +8,19 @@
     background:linear-gradient(90deg,rgba(23,40,63,1) 0%,rgba(1,114,207,1) 100%) !important;
     box-sizing: border-box;
     overflow: hidden;
+	button{
+		position:absolute;
+		right:0px;
+		width:42px;
+		height:40px;
+		border:0;
+		padding:10px 14px;
+		background-color:#084C96;
+	}
 	.timeAndName{
 		position:absolute;
-		top:15px;
-		right:150px;
+		top:10px;
+		right:60px;
 		span, i{
 			margin-right:10px;
 		}
