报表字段的修正

--- a/Page/scss/pages/_sheet.scss
+++ b/Page/scss/pages/_sheet.scss
@@ -82,6 +82,9 @@
             padding: 2px;
             text-align: center;
         }
+        td {
+            text-align: center;
+        }
         .el-table--striped .el-table__body tr.el-table__row--striped td {
             background: #f0f2f4;
         }
