--- a/Page/scss/pages/_home.scss
+++ b/Page/scss/pages/_home.scss
@@ -376,8 +376,11 @@
 			display: flex;
 			flex-direction:column;
 			padding-top:0;
-			height: 100vh;
+			// height: 100vh;
 			.flight-table {
+				.el-table {
+					background: transparent !important;
+				}
 				thead>.cell {
 					background-color: #666;
 					height: 30px;
