--- a/Page/scss/pages/_sheet.scss
+++ b/Page/scss/pages/_sheet.scss
@@ -51,8 +51,12 @@
             padding-top: 2px;
         }
         .export-excel {
-            background-color: #fdfdfd;
-            color: #333;
+            // background-color: #fdfdfd;
+            color: #fff !important;
+            a {
+                text-decoration:none;
+                color: #fff;
+            }
         }
     }
     .sheet-table {
