--- a/Page/scss/pages/_violation.scss
+++ b/Page/scss/pages/_violation.scss
@@ -174,6 +174,12 @@
             height: 30px;
             line-height: 30px;
         } 
+        .export-excel {
+            a {
+                color: #fff;
+                text-decoration: none;
+            }
+        }
     }
     .dialog {
         .el-dialog__header {
