“任务详情超时时间样式修改”

--- a/Page/scss/pages/_home.scss
+++ b/Page/scss/pages/_home.scss
@@ -610,6 +610,9 @@
 								display:inline-block;
 								min-width:50px;
 							}
+							.span4{
+								color:#EB0E0E;
+							}
 						}
 						.el-col{
 							text-align:left;
