--- a/Page/scss/pages/_messageCenter.scss
+++ b/Page/scss/pages/_messageCenter.scss
@@ -27,7 +27,6 @@
 			float:right;
 			width:220px;
 			height:34px;
-			margin-right:15px;
 		}
 		.date{
 			float:right;
@@ -43,8 +42,32 @@
 		}
 	}
 	.rowBody{
-		position:relative;
+		padding:0px 14px;
+		display:flex;
+		justify-content:space-between;
 		padding-left:15px;
+		.column3{
+			position:absolute;
+			right:10px;
+			top:0px;
+			height:inherit;
+			margin-right:6px;
+			display:flex;
+			align-items:center;
+		}
+		.sum{
+			padding:0px 3px;
+			min-width:24px;
+			height:24px;
+			border:1px solid #F1F2F5;
+			border-radius:12px;
+			font-size:14px;
+			line-height:24px;
+			text-align:center;
+		}
+		.col3,.col4{
+			text-indent:3px;
+		}
 		.card1{
 			border-radius:8px;
 			width:465px;
@@ -57,23 +80,6 @@
 				background-color:#289DFF;
 				color:#FFFFFF;
 				border-radius:8px 8px 0 0;
-				.column3{
-					position:absolute;
-					right:10px;
-					top:0px;
-					height:inherit;
-					width:24px;
-				}
-				.sum{
-					display:inline-block;
-					width:24px;
-					height:24px;
-					border:1px solid #F1F2F5;
-					border-radius:12px;
-					font-size:14px;
-					line-height:24px;
-					text-align:center;
-				}
 			}
 			.cardBody{
 				height:600px;
@@ -107,18 +113,22 @@
 						text-indent:6px;
 					}
 				}
-				.col4{
-					text-indent:1em;
-				}
 				.col5{
 					padding:8px;
 					div {
 						width:42px;
 						height:24px;
-						background-color:#D41E1E;
-						color:#FFFFFF;
 						line-height:24px;
 						text-align:center;
+					}
+					.active{
+						background-color:#D41E1E;
+						color:#FFFFFF;
+						cursor:pointer;
+					}
+					.disable{
+						background-color:#CBCED5;
+						color:#F9F9FA;
 					}
 				}
 			}
@@ -148,9 +158,6 @@
 			}
 		}
 		.card2{
-			position:absolute;
-			top:0px;
-			left:495px;
 			border-radius:8px;
 			width:375px;
 			height:680px;
@@ -162,23 +169,6 @@
 				background-color:#289DFF;
 				color:#FFFFFF;
 				border-radius:8px 8px 0 0;
-				.column3{
-					position:absolute;
-					right:10px;
-					top:0px;
-					height:inherit;
-					width:24px;
-				}
-				.sum{
-					display:inline-block;
-					width:24px;
-					height:24px;
-					border:1px solid #F1F2F5;
-					border-radius:12px;
-					font-size:14px;
-					line-height:24px;
-					text-align:center;
-				}
 			}
 			.cardBody{
 				height:600px;
@@ -211,9 +201,6 @@
 						white-space:nowrap;
 						text-indent:6px;
 					}
-				}
-				.col4{
-					text-indent:1em;
 				}
 			}
 			.cardFooter{
@@ -242,9 +229,6 @@
 			}
 		}
 		.card3{
-			position:absolute;
-			top:0px;
-			left:885px;
 			border-radius:8px;
 			width:375px;
 			height:680px;
@@ -256,23 +240,6 @@
 				background-color:#289DFF;
 				color:#FFFFFF;
 				border-radius:8px 8px 0 0;
-				.column3{
-					position:absolute;
-					right:10px;
-					top:0px;
-					height:inherit;
-					width:24px;
-				}
-				.sum{
-					display:inline-block;
-					width:24px;
-					height:24px;
-					border:1px solid #F1F2F5;
-					border-radius:12px;
-					font-size:14px;
-					line-height:24px;
-					text-align:center;
-				}
 			}
 			.cardBody{
 				height:600px;
@@ -306,9 +273,6 @@
 						text-indent:6px;
 					}
 				}
-				.col4{
-					text-indent:1em;
-				}
 			}
 			.cardFooter{
 				height:40px;
@@ -336,9 +300,6 @@
 			}
 		}
 		.card4{
-			position:absolute;
-			top:0px;
-			left:1275px;
 			border-radius:8px;
 			width:375px;
 			height:680px;
@@ -350,23 +311,6 @@
 				background-color:#289DFF;
 				color:#FFFFFF;
 				border-radius:8px 8px 0 0;
-				.column3{
-					position:absolute;
-					right:10px;
-					top:0px;
-					height:inherit;
-					width:24px;
-				}
-				.sum{
-					display:inline-block;
-					width:24px;
-					height:24px;
-					border:1px solid #F1F2F5;
-					border-radius:12px;
-					font-size:14px;
-					line-height:24px;
-					text-align:center;
-				}
 			}
 			.cardBody{
 				height:600px;
@@ -386,9 +330,6 @@
 				}
 				.col1{
 					text-align:center;
-				}
-				.col4{
-					text-indent:1em;
 				}
 			}
 			.cardFooter{
