统计未完成弹窗数据绑定，违规记录的编辑弹窗的添加

--- a/Page/scss/pages/_home.scss
+++ b/Page/scss/pages/_home.scss
@@ -924,7 +924,7 @@
 			display: inline-block;
 			height: 20px;
 			line-height: 20px;
-			min-width: 42px;
+			min-width: 3.625rem;
 			text-align: center;
 			margin:5px 0;
 			font-size: 14px;
