显示省略内容

--- a/Page/scss/pages/_messageCenter.scss
+++ b/Page/scss/pages/_messageCenter.scss
@@ -191,6 +191,7 @@
 				}
 				.col2{
 					padding:11px 5px 0px 5px;
+					text-align:center;
 					div {
 						background-color:#3A3F43;
 						color:#FFFFFF;
@@ -199,7 +200,6 @@
 						text-overflow:ellipsis;
 						overflow:hidden;
 						white-space:nowrap;
-						text-indent:6px;
 					}
 				}
 			}
@@ -262,6 +262,7 @@
 				}
 				.col2{
 					padding:11px 5px 0px 5px;
+					text-align:center;
 					div {
 						background-color:#3A3F43;
 						color:#FFFFFF;
@@ -270,7 +271,6 @@
 						text-overflow:ellipsis;
 						overflow:hidden;
 						white-space:nowrap;
-						text-indent:6px;
 					}
 				}
 			}
