新版违规记录的实现，编辑弹窗的数据绑定，后端的编辑提交接口仍有问题

--- a/Page/scss/pages/_violation.scss
+++ b/Page/scss/pages/_violation.scss
@@ -284,6 +284,7 @@
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
+        text-align: center !important;
     }
     .el-table_1_column_1 {
         font-family: $font-family-One; 
@@ -301,6 +302,7 @@
             height: 30px;
             line-height: 30px;
             color: #fff;
+            text-align: center !important;
         }
         .is-leaf {
             background: #666;
