消息中心样式优化

--- a/Page/scss/pages/_messageCenter.scss
+++ b/Page/scss/pages/_messageCenter.scss
@@ -70,7 +70,7 @@
 		}
 		.card1{
 			border-radius:8px;
-			width:465px;
+			width:26%;
 			height:680px;
 			.cardHeader{
 				position:relative;
@@ -159,7 +159,7 @@
 		}
 		.card2{
 			border-radius:8px;
-			width:375px;
+			width:24%;
 			height:680px;
 			.cardHeader{
 				position:relative;
@@ -230,7 +230,7 @@
 		}
 		.card3{
 			border-radius:8px;
-			width:375px;
+			width:24%;
 			height:680px;
 			.cardHeader{
 				position:relative;
@@ -301,7 +301,7 @@
 		}
 		.card4{
 			border-radius:8px;
-			width:375px;
+			width:24%;
 			height:680px;
 			.cardHeader{
 				position:relative;
