--- a/Page/scss/pages/_messageCenter.scss
+++ b/Page/scss/pages/_messageCenter.scss
@@ -102,6 +102,7 @@
 				}
 				.col2{
 					padding:11px 5px 0px 5px;
+					text-align:center;
 					div {
 						background-color:#3A3F43;
 						color:#FFFFFF;
@@ -110,7 +111,7 @@
 						text-overflow:ellipsis;
 						overflow:hidden;
 						white-space:nowrap;
-						text-indent:6px;
+						//text-indent:6px;
 					}
 				}
 				.col5{
