--- a/Page/scss/pages/_urgentReport.scss
+++ b/Page/scss/pages/_urgentReport.scss
@@ -3,8 +3,8 @@
 	background-color:#E4E7EC;
 	overflow-x:hidden;
 	overflow-y:auto;
-	div.el-card.is-always-shadow{
-		overflow:auto;
+	.el-carousel__item{
+		text-align:center;
 	}
 	.el-table td{
 		padding:5px 0;
