进出港统计tooltips数据格式化，未完成任务查看弹窗样式修改，每日工作量top5添加非空判断，统计时间为空值时，传最近一周的时间

--- a/Page/scss/pages/_statistics.scss
+++ b/Page/scss/pages/_statistics.scss
@@ -160,3 +160,48 @@
       }
   }
 }
+
+
+.dialog-unfinish {
+    .el-dialog__header{
+        text-align: center;
+        .el-dialog__title {
+            text-align: center;
+        }
+    }
+    .el-dialog__body {
+        border-radius: 0;
+        padding: 20px 15px !important;
+        .unfinish-table {
+            color: #333;
+            thead>.cell {
+                background-color: #666;
+                height: 30px;
+                line-height: 30px;
+                color: #fff;
+            }
+            .is-leaf {
+                background: #666;
+                color: #fff;
+                height: 28px;
+                line-height: 28px;
+                padding: 2px 0;
+                text-align: center;
+            }
+            .el-table--border th {
+                border-right-color: #666 !important;
+            } 
+            th>.is-leaf {
+                border-right-color: #666 !important;
+            }
+            td {
+                text-align: center;
+                border-color: #BDBFC3;
+                padding: 5px !important;
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+            }
+          }
+    }
+}
