违规记录编辑增加违规时间

--- a/Page/scss/pages/_violation.scss
+++ b/Page/scss/pages/_violation.scss
@@ -411,6 +411,9 @@
             width: 94%;
             line-height: 2;
         }
+        .el-input__inner {
+            width: 202px;
+        }
     }
     .dislog-picture {
         .el-dialog__header {
