--- a/Page/scss/pages/_violation.scss
+++ b/Page/scss/pages/_violation.scss
@@ -414,6 +414,15 @@
         .el-input__inner {
             width: 202px;
         }
+        .el-dialog__header {
+            padding: .625rem .9375rem .3125rem;
+        }
+        .violation-item {
+            .el-input__inner {
+                width: 600px;
+            }
+            
+        }
     }
     .dislog-picture {
         .el-dialog__header {
@@ -429,4 +438,7 @@
             height: 100px !important;
         }
     }
+}
+.el-autocomplete-suggestion .el-popper {
+    width: 600px !important;
 }
