--- a/Page/scss/pages/_violation.scss
+++ b/Page/scss/pages/_violation.scss
@@ -415,7 +415,7 @@
             width: 202px;
         }
         .el-dialog__header {
-            padding: .625rem .9375rem .3125rem;
+            padding: .625rem .9375rem .3125rem !important;
         }
         .violation-item {
             .el-input__inner {
